clap_derive/tests/ui/clap_empty_attr.stderr
error: expected attribute arguments in parentheses: #[clap(...)]
 --> $DIR/clap_empty_attr.rs:4:1
  |
4 | #[clap]
  | ^^^^^^^

error: expected parentheses: #[clap(...)]
 --> $DIR/clap_empty_attr.rs:9:12
  |
9 |     #[clap = "short"]
  |            ^
